Clean up IP lookup

--- a/client/src/assets/styles/_mixins.scss
+++ b/client/src/assets/styles/_mixins.scss
@@ -4,5 +4,6 @@
 
 @import 'assets/styles/vendor/mdi/css/materialdesignicons.min.css';
 @import 'theme/style';
+@import 'custom/alerts';
 
 @import '~vue-select/src/scss/vue-select';
